# python-webproject-streamlite

./: docker-compose.yml  pyproject.toml
src/backend/: crud.py  router.py
src/backend/databases/: MSSQLServer.py
src/backend/models/: ProductModel.py
src/backend/schemas/: ProductSchema.py
