[tool.poetry]
name = "python-webproject-streamlite"
version = "0.1.0"
description = "Projeto simples de web utilizando streamlite"
authors = ["Eu mesmo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
